tests/machine/x/ocaml/basic_compare.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/basic_compare.ml", line 5, characters 2-15:
5 |   print_endline a
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 5):
   3 | 
   4 | let () =
   5 |   print_endline a
   6 |   print_endline (a = 7)
   7 |   print_endline (b < 5)
