tests/machine/x/ocaml/basic_compare.ml
let a = (10 - 3)
let b = (2 + 2)

let () =
  print_endline a
  print_endline (a = 7)
  print_endline (b < 5)
